--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "./node_modules/@grafana/toolkit/src/config/tsconfig.plugin.json",
   "include": ["src", "types"],
   "compilerOptions": {
-    "rootDir": "./src",
+    "rootDirs": [
+      "./shared",
+      "./src",
+    ],
     "baseUrl": "./src",
     "typeRoots": ["./node_modules/@types"]
   }
