--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "faker": "5.4.0",
     "grpc": "1.24.5",
     "google-protobuf": "3.15.4",
-    "@grafana/tsbackend": "srclosson/grafana-tsbackend#src/dataquery"
+    "@grafana/tsbackend": "grafana/grafana-plugin-sdk-typescript"
   }
 }
