misc updates and updated libraries

--- a/package.json
+++ b/package.json
@@ -7,24 +7,24 @@
     "build": "grafana-toolkit plugin:build",
     "test": "grafana-toolkit plugin:test",
     "dev": "grafana-toolkit plugin:dev && yarn backend",
-    "backend": "./node_modules/@grafana/tsbackend/bin/grafana-tsbackend gpx_faker_darwin_amd64",
-    "restart:backend": "kill $(ps -ef | grep gpx_faker_darwin_amd64 | grep -v grep | awk '{ print $2 }')",
+    "backend": "./node_modules/@grafana/tsbackend/bin/grafana-tsbackend",
+    "restart:backend": "kill $(ps -ef | grep gpx_faker | grep -v grep | awk '{ print $2 }')",
     "watch": "grafana-toolkit plugin:dev --watch",
     "build-all": "yarn build && yarn backend"
   },
   "author": "Stephanie Closson",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@grafana/data": "7.4.2",
+    "@grafana/data": "7.5.4",
     "@grafana/tsconfig": "1.0.0-rc1",
-    "@grafana/toolkit": "7.4.2",
-    "@grafana/runtime": "7.4.2",
-    "@grafana/ui": "7.4.2",
-    "@types/faker": "5.1.7",
+    "@grafana/toolkit": "7.5.4",
+    "@grafana/runtime": "7.5.4",
+    "@grafana/ui": "7.5.4",
+    "@types/faker": "5.5.3",
     "@types/lodash": "4.14.168",
-    "faker": "5.4.0",
-    "grpc": "1.24.5",
-    "google-protobuf": "3.15.4",
+    "faker": "5.5.3",
+    "grpc": "1.24.9",
+    "google-protobuf": "3.16.0-rc.2",
     "@grafana/tsbackend": "grafana/grafana-plugin-sdk-typescript"
   }
 }
