--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: 14.x
 
       - name: Install dependencies
-        run: yarn install
+        run: yarn install && /bin/rm -rf node_modules/@grafana/data/node_modules/rxjs
 
       - name: Build plugin
         run: yarn build
